--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "url": "https://github.com/felixmariotto/Three-Mesh-UI/issues"
   },
   "homepage": "https://github.com/felixmariotto/Three-Mesh-UI#readme",
+  "dependencies": {
+    "three": "^0.137.5"
+  },
   "devDependencies": {
     "@babel/core": "^7.17.9",
     "@babel/eslint-parser": "^7.17.0",
@@ -49,8 +52,5 @@
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
-  },
-  "peerDependencies": {
-    "three": ">=0.132.1"
   }
 }
