--- a/package.json
+++ b/package.json
@@ -36,14 +36,14 @@
   },
   "homepage": "https://github.com/felixmariotto/Three-Mesh-UI#readme",
   "dependencies": {
-    "three": "^0.137.5"
+    "@types/three": "~0.137.0",
+    "three": "~0.137.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
     "@babel/eslint-parser": "^7.17.0",
     "@babel/eslint-plugin": "^7.17.7",
     "@babel/preset-env": "^7.16.11",
-    "@types/three": "^0.136.1",
     "acorn": "^8.7.0",
     "eslint": "^8.13.0",
     "eslint-webpack-plugin": "^3.1.1",
